[package]
name = "node-rust-canvas"
version = "0.0.1"
authors = ["LongYinan <lynweklm@gmail.com>"]

[lib]
name = "node_rust_canvas"
crate-type = ["dylib", "cdylib"]

[build-dependencies]
neon-build = "0.1.22"

[dependencies]
cssparser = { version = "0.23", features = ["serde"] }
euclid = { version = "0.17", features = ["serde"] }
image = "0.18"
neon = "0.1"
neon-runtime = "0.1"
rustcanvas = { git = "https://github.com/rust-canvas/rust-canvas" }
